# lab-report-ocr

./: .env.example  .gitignore  BRD MVP-V1.txt  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pnpm-lock.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/core/: config.py  exceptions.py  logging.py
apps/backend/app/modules/export/: __init__.py
apps/backend/app/modules/health/: router.py  schemas.py  service.py
apps/backend/app/modules/ocr/: __init__.py
apps/backend/app/modules/review/: __init__.py
apps/backend/app/modules/storage/: schemas.py  service.py  utils.py
apps/backend/app/modules/template/: __init__.py  exceptions.py  loader.py  repository.py  schemas.py  service.py
apps/backend/app/modules/upload/: __init__.py  router.py  schemas.py  service.py
apps/backend/app/shared/: dependencies.py  responses.py
apps/frontend/: .dockerignore  Dockerfile  README.md  index.html  vite.config.ts
apps/frontend-old/: README.md
apps/frontend/src/: main.tsx
apps/frontend/src/router/: index.tsx
config/: README.md
docker/: README.md
docs/: API.md  Architecture.md  BRD.md  Data-Mapping.md  Deployment.md  Development-Guide.md  README.md  Roadmap.md
scripts/: README.md
templates/: lhu-v1.json
templates/LHU/: README.md
tests/backend/: README.md
tests/fixtures/: README.md
tests/frontend/: README.md
(+39 files in other folders)
