[project]
name = "lab-report-ocr-backend"
version = "0.1.0"
description = "Backend API for lab-report-ocr"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.110.0,<1",
    "uvicorn[standard]>=0.30.0,<1",
    "pydantic>=2.0.0,<3",
    "pydantic-settings>=2.0.0,<3",
]

[dependency-groups]
dev = ["ruff>=0.10.0,<1"]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "single"
